elaborated splash page, fixed some state ishoos, changed some styling

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,21 @@
   max-height:50px;
 }
 
+.lets {
+  display: flex;
+  justify-content: space-between;
+}
+
+.avatar {
+  display:flex;
+  flex-direction: column;
+}
 
 
+#positionContent {
+  text-align: left;
+}
 
+#big {
+  font-size: 90px;
+}
